--- a/Register.html
+++ b/Register.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="/socket.io/socket.io.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="Register.css">
+    
     <script>
         const socket = io();
         function onBtnClicked() {
